package Cashiers;

public enum State {
	OPEN, CLOSED, BUSY
}
