package Orders;

public interface Delivery {
	public boolean isDelivery();



}
